# progetto_pds_rust

./: Cargo.toml  LICENSE  README.md
project/: .gitignore  Cargo.toml  path  shortcuts  shortcuts_new
project/conf/: shortcut
project/src/: main.rs
