[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_lib = { path = "../library/event_lib" }
gui_lib = { path = "../library/gui_lib" }
screenshots = "0.7.1"
bincode = "1.3.3"
druid = "0.8.3"

