[package]
name = "project"
version = "0.1.0"
edition = "2021"
description = "App for take and modify screenshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_lib = { path = "../library/event_lib" }
gui_lib = { path = "../library/gui_lib" }

[dependencies.druid]
version = "0.8.3"
features = ["im", "svg", "image"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
